--- a/ClientSide/src/index.css
+++ b/ClientSide/src/index.css
@@ -81,4 +81,21 @@ select:hover{
   color:black;
   background-color: #fff;
 }
+.home{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+.container{
+  width: 80%;
+  height: 80%;
+  padding: 2%;
+  background-color: #bababc;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+}
 
