--- a/ClientSide/src/index.css
+++ b/ClientSide/src/index.css
@@ -98,4 +98,19 @@ select:hover{
   border-radius: 10px;
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 }
+.crad{
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #455c5b;
+
+}
+.formCrad{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
