--- a/ClientSide/src/index.css
+++ b/ClientSide/src/index.css
@@ -99,7 +99,8 @@ select:hover{
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 }
 .crad{
-  flex-grow: 1;
+  width: 100%!important;
+  height: 100%!important;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -112,5 +113,7 @@ select:hover{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-height: 70%!important;
+  max-width: 70%!important;
 }
 
