--- a/ClientSide/src/index.css
+++ b/ClientSide/src/index.css
@@ -11,6 +11,10 @@
   display: flex;
   flex-direction: column;
 }
+
+.navBar{
+ 
+}
 .Map{
   width: 97%!important;
   height: 90%!important;
@@ -99,8 +103,8 @@ select:hover{
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 }
 .crad{
-  width: 100%!important;
-  height: 100%!important;
+  max-height: 90vh;
+  max-width: 100vw!important;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -113,7 +117,13 @@ select:hover{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-height: 70%!important;
+  max-height: 90%!important;
   max-width: 70%!important;
 }
+form{
+  overflow: auto;
+  scrollbar-width: none;
+  margin: 0!important;
+}
+
 
