--- a/ClientSide/src/index.css
+++ b/ClientSide/src/index.css
@@ -1,27 +1,27 @@
-*{
+* {
   margin: 0;
   padding: 0;
-  box-sizing: border-box!important;
+  box-sizing: border-box !important;
 }
-.app{
-  width: 100vw!important;
-  height: 100vh!important;
-  max-width: 100vw!important;
-  max-height: 100vh!important;
+
+.app {
+  width: 100vw !important;
+  height: 100vh !important;
+  max-width: 100vw !important;
+  max-height: 100vh !important;
   display: flex;
   flex-direction: column;
 }
 
-.navBar{
- 
-}
-.Map{
-  width: 97%!important;
-  height: 90%!important;
-  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+.navBar {}
+
+.Map {
+  width: 97% !important;
+  height: 90% !important;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
 }
 
-.grafs{
+.grafs {
   width: 100%;
   height: 100%;
   display: flex;
@@ -29,18 +29,20 @@
   background-color: #45454557;
 
 }
-.map-container{
-position: relative;
-width: 100%;
-height: 100%;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 0!important;
-margin: 0!important;
+
+.map-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 !important;
+  margin: 0 !important;
 }
-.displayGraf{
+
+.displayGraf {
   padding: 2%;
   display: flex;
   flex-direction: column;
@@ -49,43 +51,49 @@ margin: 0!important;
   width: 100%;
   height: 100%;
 }
-.filter{
-  height: 100%!important;
+
+.filter {
+  height: 100% !important;
 }
-.spiner{
-  position:fixed;
-  top:50%;
-  left:50%;
-  transform: translate(-50%,-50%);
- 
+
+.spiner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.selectCantry{
+
+.selectCantry {
   position: absolute;
   top: 0;
   right: 0%;
-  transform: translate(-20%,-130%);
+  transform: translate(-20%, -130%);
   display: flex;
   gap: 1em;
   padding: 0.5%;
   justify-content: center;
 }
-select{
+
+select {
   background-color: #029be8;
   padding: 2.5%;
   border: none;
-  font-size:1em;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-  color:#fff;
+  font-size: 1em;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  color: #fff;
   border-radius: 5px;
 }
-select:hover{
-  color:black;
+
+select:hover {
+  color: black;
   background-color: #fff;
 }
-.home{
+
+.home {
   width: 100%;
   height: 100%;
   display: flex;
@@ -94,17 +102,56 @@ select:hover{
   align-items: center;
 
 }
-.container{
+
+.container {
   width: 80%;
   height: 80%;
   padding: 2%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: #bababc;
   border-radius: 10px;
-  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
 }
-.crad{
+.css-4q5u5v-MuiTypography-root{
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  margin: 0% !important;
+  padding: 0% !important;
+}
+.css-1q354jb{
+  width: 100% !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  padding: 1% !important;
+}
+.css-17hyop5-MuiGrid-root {
+  padding: 1%;
+  max-width: 100% !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+
+}
+.css-11l5t4l-MuiGrid-root{
+  width: 100%!important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  margin: 0!important;
+  padding: 0.2!important;
+
+}
+.css-5s1wr7-MuiButtonBase-root-MuiButton-root{
+
+}
+.crad {
   max-height: 90vh;
-  max-width: 100vw!important;
+  max-width: 100vw !important;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -112,18 +159,18 @@ select:hover{
   background-color: #455c5b;
 
 }
-.formCrad{
+
+.formCrad {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-height: 90%!important;
-  max-width: 70%!important;
+  max-height: 90% !important;
+  max-width: 70% !important;
 }
-form{
+
+form {
   overflow: auto;
   scrollbar-width: none;
-  margin: 0!important;
+  margin: 0 !important;
 }
-
-
