--- a/ClientSide/src/index.css
+++ b/ClientSide/src/index.css
@@ -150,7 +150,7 @@ select:hover {
 
 }
 .crad {
-  max-height: 90vh;
+  max-height: 90vh!important;
   max-width: 100vw !important;
   display: flex;
   flex-direction: column;
@@ -173,4 +173,26 @@ form {
   overflow: auto;
   scrollbar-width: none;
   margin: 0 !important;
+}
+.deleteOrUpdate{
+  height: 50%;
+  width: 80vw;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+}
+
+.card{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  padding: 1em;
+  width: 80%;
 }
